--- a/services/libs/pyproject.toml
+++ b/services/libs/pyproject.toml
@@ -29,4 +29,12 @@ python_version = "3.11"
 warn_return_any = true
 ignore_missing_imports = false
 check_untyped_defs = true
-disallow_untyped_defs = false 
+disallow_untyped_defs = false
+
+# External libraries without official type stubs
+[[tool.mypy.overrides]]
+module = [
+    "aiokafka.*",
+    "redis.*",
+]
+ignore_missing_imports = true 
