--- a/env.example
+++ b/env.example
@@ -14,4 +14,12 @@ HULEEDU_DB_PASSWORD=your-secure-database-password-here
 OPENAI_API_KEY=your-openai-api-key-here
 ANTHROPIC_API_KEY=your-anthropic-api-key-here
 GOOGLE_API_KEY=your-google-api-key-here
-OPENROUTER_API_KEY=your-openrouter-api-key-here 
+OPENROUTER_API_KEY=your-openrouter-api-key-here
+
+# =============================================================================
+# LLM Provider Service Configuration
+# =============================================================================
+LLM_ADMIN_API_KEY=your-llm-admin-api-key-here
+DEFAULT_LLM_PROVIDER=anthropic
+PROVIDER_SELECTION_STRATEGY=priority
+LLM_COST_ALERT_THRESHOLD=100.0 
