--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -366,6 +366,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      llm_provider_service:
+        condition: service_healthy
     networks:
       - huleedu_internal_network
     ports:
@@ -380,13 +382,13 @@ services:
       - CJ_ASSESSMENT_SERVICE_REDIS_URL=redis://redis:6379
       # Database configuration
       - CJ_ASSESSMENT_SERVICE_DATABASE_URL_CJ=postgresql+asyncpg://${HULEEDU_DB_USER}:${HULEEDU_DB_PASSWORD}@cj_assessment_db:5432/cj_assessment
+      # LLM Provider Service configuration
+      - CJ_ASSESSMENT_SERVICE_LLM_PROVIDER_SERVICE_URL=http://llm_provider_service:8090/api/v1
       # Testing configuration
-      - CJ_ASSESSMENT_SERVICE_USE_MOCK_LLM=true  # Use mock LLM for E2E testing (no API costs)
-      # LLM API Keys for real testing if mock is disabled
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
-      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
-      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
+      - CJ_ASSESSMENT_SERVICE_USE_MOCK_LLM=false  # Use LLM Provider Service instead
+      # Default LLM configuration (passed to LLM Provider Service)
+      - CJ_ASSESSMENT_SERVICE_DEFAULT_LLM_PROVIDER=anthropic
+      - CJ_ASSESSMENT_SERVICE_DEFAULT_LLM_MODEL=claude-3-5-haiku-20241022
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4317
       - OTEL_SERVICE_NAME=cj_assessment_service
       - OTEL_TRACES_EXPORTER=otlp
