feat: implement trace context preservation and optimized queue processing with Redis pipelining

--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -516,6 +516,7 @@ services:
       - LLM_PROVIDER_SERVICE_ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
       - LLM_PROVIDER_SERVICE_OPENAI_API_KEY=${OPENAI_API_KEY}
       - LLM_PROVIDER_SERVICE_GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - LLM_PROVIDER_SERVICE_GOOGLE_PROJECT_ID=${GOOGLE_PROJECT_ID:-}
       - LLM_PROVIDER_SERVICE_OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
       # Provider Selection
       - LLM_PROVIDER_SERVICE_DEFAULT_LLM_PROVIDER=${DEFAULT_LLM_PROVIDER:-anthropic}
