--- a/env.example
+++ b/env.example
@@ -14,6 +14,7 @@ HULEEDU_DB_PASSWORD=your-secure-database-password-here
 OPENAI_API_KEY=your-openai-api-key-here
 ANTHROPIC_API_KEY=your-anthropic-api-key-here
 GOOGLE_API_KEY=your-google-api-key-here
+GOOGLE_PROJECT_ID=your-google-cloud-project-id-here
 OPENROUTER_API_KEY=your-openrouter-api-key-here
 
 # =============================================================================
