--- a/services/llm_provider_service/pyproject.toml
+++ b/services/llm_provider_service/pyproject.toml
@@ -27,6 +27,8 @@ dependencies = [
     "anthropic",
     "openai",
     "google-generativeai",
+    # Performance testing dependencies
+    "psutil",
 ]
 
 [build-system]
